--- a/Basic Lineer Regresyon ve OLS.ipynb
+++ b/Basic Lineer Regresyon ve OLS.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -652,7 +652,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -761,7 +761,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
    "outputs": [],
    "source": [
     "Y = train['SalePrice']\n",
-    "X = train[[\"CentralAir_\",\"GrLivArea\",\"YearBuilt\",\"PoolQC_\",\"Alley_\",\"LandContour_\",\"LandSlope_\"]]"
+    "X = train[[\"CentralAir_\",\"PoolQC_\",\"Alley_\",\"LandContour_\",\"LandSlope_\"]]"
    ]
   },
   {
@@ -1963,10 +1963,10 @@
      "output_type": "stream",
      "text": [
       "Değişkenler: \n",
-      " [ 15072.68454493     95.8509089     998.66573719 -29330.38904289\n",
-      "  -4070.32927598   7218.57363505   6026.75444579]\n",
+      " [ 78743.39977146  23151.62064236 -12218.10787599  11875.50860856\n",
+      "   1315.12756669]\n",
       "Sabit değer (bias): \n",
-      " -1948182.326915588\n"
+      " 105768.16758900514\n"
      ]
     }
    ],
@@ -1979,7 +1979,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1988,28 +1988,28 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>        <td>SalePrice</td>    <th>  R-squared:         </th> <td>   0.665</td> \n",
+       "  <th>Dep. Variable:</th>        <td>SalePrice</td>    <th>  R-squared:         </th> <td>   0.078</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.663</td> \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.075</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   411.3</td> \n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   24.67</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 25 Apr 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "  <th>Date:</th>             <td>Tue, 28 Apr 2020</td> <th>  Prob (F-statistic):</th> <td>6.43e-24</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>17:41:15</td>     <th>  Log-Likelihood:    </th> <td> -17746.</td> \n",
+       "  <th>Time:</th>                 <td>17:04:22</td>     <th>  Log-Likelihood:    </th> <td> -18485.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.551e+04</td>\n",
+       "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.698e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>  1452</td>      <th>  BIC:               </th> <td>3.555e+04</td>\n",
+       "  <th>Df Residuals:</th>          <td>  1454</td>      <th>  BIC:               </th> <td>3.701e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Model:</th>              <td>     7</td>      <th>                     </th>     <td> </td>    \n",
+       "  <th>Df Model:</th>              <td>     5</td>      <th>                     </th>     <td> </td>    \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
@@ -2020,81 +2020,71 @@
        "        <td></td>          <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>const</th>        <td>-1.948e+06</td> <td> 8.56e+04</td> <td>  -22.767</td> <td> 0.000</td> <td>-2.12e+06</td> <td>-1.78e+06</td>\n",
+       "  <th>const</th>        <td> 1.058e+05</td> <td> 8041.066</td> <td>   13.154</td> <td> 0.000</td> <td>    9e+04</td> <td> 1.22e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>CentralAir_</th>  <td> 1.507e+04</td> <td> 5317.368</td> <td>    2.835</td> <td> 0.005</td> <td> 4642.141</td> <td> 2.55e+04</td>\n",
+       "  <th>CentralAir_</th>  <td> 7.874e+04</td> <td> 8196.544</td> <td>    9.607</td> <td> 0.000</td> <td> 6.27e+04</td> <td> 9.48e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>GrLivArea</th>    <td>   95.8509</td> <td>    2.385</td> <td>   40.197</td> <td> 0.000</td> <td>   91.173</td> <td>  100.528</td>\n",
+       "  <th>PoolQC_</th>      <td> 2.315e+04</td> <td> 1.26e+04</td> <td>    1.839</td> <td> 0.066</td> <td>-1548.560</td> <td> 4.79e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>YearBuilt</th>    <td>  998.6657</td> <td>   44.516</td> <td>   22.434</td> <td> 0.000</td> <td>  911.342</td> <td> 1085.989</td>\n",
+       "  <th>Alley_</th>       <td>-1.222e+04</td> <td> 5435.361</td> <td>   -2.248</td> <td> 0.025</td> <td>-2.29e+04</td> <td>-1556.120</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>PoolQC_</th>      <td>-2.933e+04</td> <td> 7704.785</td> <td>   -3.807</td> <td> 0.000</td> <td>-4.44e+04</td> <td>-1.42e+04</td>\n",
+       "  <th>LandContour_</th> <td> 1.188e+04</td> <td> 3616.881</td> <td>    3.283</td> <td> 0.001</td> <td> 4780.646</td> <td>  1.9e+04</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Alley_</th>       <td>-4070.3293</td> <td> 3310.385</td> <td>   -1.230</td> <td> 0.219</td> <td>-1.06e+04</td> <td> 2423.319</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>LandContour_</th> <td> 7218.5736</td> <td> 2184.656</td> <td>    3.304</td> <td> 0.001</td> <td> 2933.154</td> <td> 1.15e+04</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>LandSlope_</th>   <td> 6026.7544</td> <td> 5092.856</td> <td>    1.183</td> <td> 0.237</td> <td>-3963.388</td> <td>  1.6e+04</td>\n",
+       "  <th>LandSlope_</th>   <td> 1315.1276</td> <td> 8407.437</td> <td>    0.156</td> <td> 0.876</td> <td>-1.52e+04</td> <td> 1.78e+04</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td>401.582</td> <th>  Durbin-Watson:     </th> <td>   1.985</td>\n",
+       "  <th>Omnibus:</th>       <td>640.638</td> <th>  Durbin-Watson:     </th> <td>   2.035</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>7147.172</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>3973.152</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td> 0.806</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
+       "  <th>Skew:</th>          <td> 1.952</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td>13.719</td>  <th>  Cond. No.          </th> <td>1.78e+05</td>\n",
+       "  <th>Kurtosis:</th>      <td>10.076</td>  <th>  Cond. No.          </th> <td>    8.82</td>\n",
        "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 1.78e+05. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:              SalePrice   R-squared:                       0.665\n",
-       "Model:                            OLS   Adj. R-squared:                  0.663\n",
-       "Method:                 Least Squares   F-statistic:                     411.3\n",
-       "Date:                Sat, 25 Apr 2020   Prob (F-statistic):               0.00\n",
-       "Time:                        17:41:15   Log-Likelihood:                -17746.\n",
-       "No. Observations:                1460   AIC:                         3.551e+04\n",
-       "Df Residuals:                    1452   BIC:                         3.555e+04\n",
-       "Df Model:                           7                                         \n",
+       "Dep. Variable:              SalePrice   R-squared:                       0.078\n",
+       "Model:                            OLS   Adj. R-squared:                  0.075\n",
+       "Method:                 Least Squares   F-statistic:                     24.67\n",
+       "Date:                Tue, 28 Apr 2020   Prob (F-statistic):           6.43e-24\n",
+       "Time:                        17:04:22   Log-Likelihood:                -18485.\n",
+       "No. Observations:                1460   AIC:                         3.698e+04\n",
+       "Df Residuals:                    1454   BIC:                         3.701e+04\n",
+       "Df Model:                           5                                         \n",
        "Covariance Type:            nonrobust                                         \n",
        "================================================================================\n",
        "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
        "--------------------------------------------------------------------------------\n",
-       "const        -1.948e+06   8.56e+04    -22.767      0.000   -2.12e+06   -1.78e+06\n",
-       "CentralAir_   1.507e+04   5317.368      2.835      0.005    4642.141    2.55e+04\n",
-       "GrLivArea       95.8509      2.385     40.197      0.000      91.173     100.528\n",
-       "YearBuilt      998.6657     44.516     22.434      0.000     911.342    1085.989\n",
-       "PoolQC_      -2.933e+04   7704.785     -3.807      0.000   -4.44e+04   -1.42e+04\n",
-       "Alley_       -4070.3293   3310.385     -1.230      0.219   -1.06e+04    2423.319\n",
-       "LandContour_  7218.5736   2184.656      3.304      0.001    2933.154    1.15e+04\n",
-       "LandSlope_    6026.7544   5092.856      1.183      0.237   -3963.388     1.6e+04\n",
+       "const         1.058e+05   8041.066     13.154      0.000       9e+04    1.22e+05\n",
+       "CentralAir_   7.874e+04   8196.544      9.607      0.000    6.27e+04    9.48e+04\n",
+       "PoolQC_       2.315e+04   1.26e+04      1.839      0.066   -1548.560    4.79e+04\n",
+       "Alley_       -1.222e+04   5435.361     -2.248      0.025   -2.29e+04   -1556.120\n",
+       "LandContour_  1.188e+04   3616.881      3.283      0.001    4780.646     1.9e+04\n",
+       "LandSlope_    1315.1276   8407.437      0.156      0.876   -1.52e+04    1.78e+04\n",
        "==============================================================================\n",
-       "Omnibus:                      401.582   Durbin-Watson:                   1.985\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             7147.172\n",
-       "Skew:                           0.806   Prob(JB):                         0.00\n",
-       "Kurtosis:                      13.719   Cond. No.                     1.78e+05\n",
+       "Omnibus:                      640.638   Durbin-Watson:                   2.035\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             3973.152\n",
+       "Skew:                           1.952   Prob(JB):                         0.00\n",
+       "Kurtosis:                      10.076   Cond. No.                         8.82\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
        "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The condition number is large, 1.78e+05. This might indicate that there are\n",
-       "strong multicollinearity or other numerical problems.\n",
        "\"\"\""
       ]
      },
@@ -2106,128 +2096,6 @@
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
-    "X = sm.add_constant(X)\n",
-    "results = sm.OLS(Y, X).fit()\n",
-    "results.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y = train['SalePrice']\n",
-    "X = train[[\"GrLivArea\",\"GarageCars\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>OLS Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>        <td>SalePrice</td>    <th>  R-squared:         </th> <td>   0.625</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.624</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   1212.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 25 Apr 2020</td> <th>  Prob (F-statistic):</th> <td>1.18e-310</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                 <td>17:41:16</td>     <th>  Log-Likelihood:    </th> <td> -17829.</td> \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.566e+04</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>  1457</td>      <th>  BIC:               </th> <td>3.568e+04</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Model:</th>              <td>     2</td>      <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>const</th>      <td> -1.34e+04</td> <td> 4159.831</td> <td>   -3.222</td> <td> 0.001</td> <td>-2.16e+04</td> <td>-5243.794</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>GrLivArea</th>  <td>   79.1790</td> <td>    2.745</td> <td>   28.845</td> <td> 0.000</td> <td>   73.795</td> <td>   84.563</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>GarageCars</th> <td> 4.206e+04</td> <td> 1930.133</td> <td>   21.793</td> <td> 0.000</td> <td> 3.83e+04</td> <td> 4.58e+04</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "  <th>Omnibus:</th>       <td>304.155</td> <th>  Durbin-Watson:     </th> <td>   2.038</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>3877.500</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Skew:</th>          <td> 0.586</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kurtosis:</th>      <td>10.897</td>  <th>  Cond. No.          </th> <td>5.32e+03</td>\n",
-       "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 5.32e+03. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                            OLS Regression Results                            \n",
-       "==============================================================================\n",
-       "Dep. Variable:              SalePrice   R-squared:                       0.625\n",
-       "Model:                            OLS   Adj. R-squared:                  0.624\n",
-       "Method:                 Least Squares   F-statistic:                     1212.\n",
-       "Date:                Sat, 25 Apr 2020   Prob (F-statistic):          1.18e-310\n",
-       "Time:                        17:41:16   Log-Likelihood:                -17829.\n",
-       "No. Observations:                1460   AIC:                         3.566e+04\n",
-       "Df Residuals:                    1457   BIC:                         3.568e+04\n",
-       "Df Model:                           2                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
-       "==============================================================================\n",
-       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "------------------------------------------------------------------------------\n",
-       "const       -1.34e+04   4159.831     -3.222      0.001   -2.16e+04   -5243.794\n",
-       "GrLivArea     79.1790      2.745     28.845      0.000      73.795      84.563\n",
-       "GarageCars  4.206e+04   1930.133     21.793      0.000    3.83e+04    4.58e+04\n",
-       "==============================================================================\n",
-       "Omnibus:                      304.155   Durbin-Watson:                   2.038\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             3877.500\n",
-       "Skew:                           0.586   Prob(JB):                         0.00\n",
-       "Kurtosis:                      10.897   Cond. No.                     5.32e+03\n",
-       "==============================================================================\n",
-       "\n",
-       "Warnings:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "[2] The condition number is large, 5.32e+03. This might indicate that there are\n",
-       "strong multicollinearity or other numerical problems.\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "X = sm.add_constant(X)\n",
     "results = sm.OLS(Y, X).fit()\n",
     "results.summary()"
